<!--
  ~     Copyright 2016 Jeremy Schiemann, Jean-Pierre Hotz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Messaging</string>

    <string name="message_sendTextField_hint">Type your message</string>

    <string name="defaultUserName">Unknown user</string>
    <string name="settings_savesettings">Save</string>
    <string name="settings_yourusernamehint">Your username</string>
    <string name="settingsmessage_invalidusername">This is an invalid username.</string>
    <string name="settingsBottomSheetCaption">Settings</string>
    <string name="settings_limitsavedmessageshint">Limit saved messages?</string>
    <string name="settings_limitsavedmessagesamountcaption">Amount of messages to save</string>
    <string name="limitsavedmessagesamount_template">%1$1d</string>
    <string name="settingsmessage_invalidadminpassword">Wrong password.</string>
    <string name="splashscreen_subtitle">A school project by Jeremy and Jonny.</string>

    <string name="action_pingserver">Ping Server</string>
    <string name="action_showsettings">Settings</string>
    <string name="action_users">User list</string>
    <string name="action_adminmessage">Send admin message</string>
    <string name="action_deletemessages">Delete messages</string>
    <string name="action_serversettings">Server settings</string>

    <string name="pingresult_connected">Connection to the server is established.</string>
    <string name="pingresult_timedout">The connection to the server has timed out.</string>

    <string name="internetmessage_reconnect">We\'re back! Internet connection restored.</string>
    <string name="internetmessage_disconnect">No internet connection… bummer.</string>
    <string name="internetmessage_offline">Unfortunately we\'re currently offline.</string>
    <string name="internetmessage_serverdown">The server seems to be down…</string>
    <string name="internetmessage_serverdown_reconnect">Reconnect</string>
    <string name="internetmessage_serverdisconnect">You just disconnected from the server.</string>

    <string name="dateannouncement_template" translatable="false">EEEE dd. MMMM yyyy</string>

    <string name="serverinformation_defaultadress" translatable="false">verelpi.ddns.net</string>
    <integer name="serverinformation_defaultport">1234</integer>
    <string name="adminPassword" translatable="false">overFL0W8:</string>

    <string name="prefs_settings_preference" translatable="false">SharedPreferences prefs = getSharedPreferences(getString(R.string.prefs_settings_preference), MODE_PRIVATE);</string>
    <string name="prefs_settings_firstLaunch" translatable="false">if(prefs.getBoolean(getString(R.string.prefs_settings_firstLaunch), true)) {</string>
    <string name="prefs_settings_currentname" translatable="false">currentName = prefs.getString(getString(R.string.prefs_settings_currentname), getString(R.string.defaultUserName));</string>
    <string name="prefs_settings_limitsavedmessages" translatable="false">limitSavedMessages = prefs.getBoolean(getString(R.string.prefs_settings_limitsavedmessages), true);</string>
    <string name="prefs_settings_limitsavedmessagesamount" translatable="false">limitSavedMessagesAmount = prefs.getInt(getString(R.string.prefs_settings_limitsavedmessagesamount), 2500);</string>
    <string name="prefs_messages" translatable="false">MessageLoader.saveMessages(mMessages, getSharedPreferences(getString(R.string.prefs_messages), MODE_PRIVATE));</string>
    <string name="prefs_serverinformation" translatable="false">SharedPreferences serverPreferences = getSharedPreferences(getString(R.string.prefs_serverinformation), MODE_PRIVATE);</string>
    <string name="prefs_serverinformation_serveradress" translatable="false">serverPreferences.getString(getString(R.string.prefs_serverinformation_serveradress), getString(R.string.serverinformation_defaultadress)),</string>
    <string name="prefs_serverinformation_serverport" translatable="false">serverPreferences.getInt(getString(R.string.prefs_serverinformation_serverport), getResources().getInteger(R.integer.serverinformation_defaultport))</string>

    <string name="usercount_default_condensed">0</string>
    <string name="usercount_default">0 Users connected</string>
    <string name="usercount_template_condensed">%1$1d</string>
    <string name="usercount_template">%1$1d Users connected</string>
    <string name="userlist_caption">Connected users</string>

    <string name="dialog_adminmessage_title">Admin message</string>
    <string name="dialog_adminmessage_positivebutton">Send</string>
    <string name="dialog_adminmessage_negativebutton">Abort</string>
    <string name="dialog_adminmessage_messagehint">Your admin message</string>

    <string name="dialog_adminrights_title">Admin rights required</string>
    <string name="dialog_adminrights_positivebutton">Submit</string>
    <string name="dialog_adminrights_negativebutton">Abort</string>
    <string name="dialog_adminrights_passwordhint">Admin password</string>

    <string name="dialog_serversettings_caption">Server settings</string>
    <string name="dialog_serversettings_positive">Apply</string>
    <string name="dialog_serversettings_negative">Dismiss</string>
    <string name="dialog_serversettings_warning">WARNING: You should only change these values, if you know what you\'re doing, or you were told to do so by someone who knows what he\'s doing.\nA change of these values will be irreversible, and might make the application not work properly anymore.</string>
    <string name="dialog_serversettings_adresshint">Server IP / Adress</string>
    <string name="dialog_serversettings_porthint">Server Port</string>

</resources>
