<!--
  ~     Copyright 2016 Jeremy Schiemann, Jean-Pierre Hotz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.jeanpierrehotz.messagingapptest.MainActivity">

    <item
        android:id="@+id/action_usercount"
        android:orderInCategory="99"
        android:titleCondensed="@string/usercount_default_condensed"
        android:title="@string/usercount_default"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_users"
        android:orderInCategory="100"
        android:icon="@drawable/ic_vector_users"
        android:title="@string/action_users"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_adminmessage"
        android:orderInCategory="101"
        android:icon="@drawable/ic_vector_adminmessage"
        android:title="@string/action_adminmessage"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ping"
        android:orderInCategory="102"
        android:icon="@drawable/ic_vector_menu_ping"
        android:title="@string/action_pingserver"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_deletemessages"
        android:orderInCategory="103"
        android:icon="@drawable/ic_vector_deletemessages"
        android:title="@string/action_deletemessages"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:icon="@drawable/ic_vector_showsettings"
        android:title="@string/action_showsettings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_serversettings"
        android:orderInCategory="105"
        android:icon="@drawable/ic_vector_serverinformation"
        android:title="@string/action_serversettings"
        app:showAsAction="ifRoom"/>

</menu>
