<!--
  ~     Copyright 2016 Jeremy Schiemann, Jean-Pierre Hotz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bottomsheet="http://schemas.android.com/apk/android.support.design"
    android:id="@+id/settingsBottomSheet"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    bottomsheet:behavior_skipCollapsed="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorConnectionRestored"
        android:paddingStart="8dp"
        android:gravity="center_vertical|start"
        android:text="@string/settingsBottomSheetCaption"
        android:textColor="@color/colorConnectionFont"
        android:layout_alignParentTop="true"
        android:id="@+id/settingsBottomSheetCaptionTextView"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsBottomSheetCaptionTextView"
        android:paddingBottom="90dp"
        android:background="@color/white"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/userNameEditText"
            android:hint="@string/settings_yourusernamehint"
            android:singleLine="true"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_limitsavedmessageshint"
            android:layout_below="@+id/userNameEditText"
            android:layout_alignEnd="@+id/userNameEditText"
            android:id="@+id/limitsavedmessages_switch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/limitsavedmessages_switch"
            android:layout_alignParentStart="true"
            android:text="@string/settings_limitsavedmessagesamountcaption"
            android:id="@+id/limitsavedmessagesamountcaption"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/limitsavedmessagesamount_seekbar"
            android:layout_below="@+id/limitsavedmessagesamountcaption"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:max="10000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/limitsavedmessagesamount_textview"
            tools:text="2500"
            android:textAlignment="textEnd"
            android:layout_above="@+id/limitsavedmessagesamount_seekbar"
            android:layout_alignEnd="@+id/limitsavedmessagesamount_seekbar"
            android:layout_below="@+id/limitsavedmessages_switch"
            android:layout_toEndOf="@+id/limitsavedmessagesamountcaption"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_savesettings"
            android:onClick="saveSettings"
            android:layout_below="@+id/limitsavedmessagesamount_seekbar"
            android:layout_alignEnd="@+id/limitsavedmessagesamount_seekbar"/>

    </RelativeLayout>

</RelativeLayout>
